# LLM-RAG

./: .gitignore  README.md  docker-compose.yml  test_backend.py
backend/: .dockerignore  Dockerfile  Dockerfile.aws.lambda  Dockerfile.aws.lambda.old  Dockerfile.old  README.md  loggers.py  main.py  pyproject.toml  requirements.txt
backend/app/: main.py  routes.py
backend/app/controllers/: users.py
backend/app/core/: bot.py  config.py  constants.py  db.py  scheduler.py  security.py
backend/app/core/tools/: __init__.py  drug_interaction.py
backend/app/models/: __init__.py  bot.py  users.py
backend/app/views/: chat.py  users.py  utils.py
backend/migrations/: env.py
backend/migrations/versions/: 80253d1bd4e2_initial_migration.py
exp/: 1.0-medfaq-retrival-augmented-generation.ipynb  sort_requirements.py
lambda/: Dockerfile  app.py  db.sqlite  requirements.txt
ragbot/: .gitignore  README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.app.tsbuildinfo
ragbot/src/: App.tsx
ragbot/src/api/: embedding.ts  langchain.ts  openai.ts  qdrant.ts
ragbot/src/components/custom/: chatinput.tsx  error-alert.tsx  header.tsx  mailto.tsx  message.tsx  overview.tsx
ragbot/src/context/: ThemeContext.tsx
ragbot/src/pages/chat/: chat.tsx
