[project]
name = "medquad"
version = "0.1.0"
description = "A Retrieval Augmented Generation powered Chatbot."
authors = [{name = "Anurag Shenoy", email = "19914954+shenoy-anurag@users.noreply.github.com"}]
readme = "../README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.4",
    "apscheduler>=3.11.2",
    "bcrypt>=5.0.0",
    "fastapi[standard]>=0.135.3",
    "langchain>=1.2.15",
    "langchain-community>=0.4.1",
    "langchain-google-genai>=4.2.1",
    "langchain-openai>=1.1.12",
    "langchain-qdrant>=1.1.0",
    "mangum>=0.21.0",
    "pydantic-settings>=2.13.1",
    "pyjwt>=2.12.1",
    "python-dotenv>=1.2.2",
    "pytz>=2026.1.post1",
    "requests>=2.33.1",
    "sqlmodel>=0.0.38",
    "websockets>=16.0",
]

[dependency-groups]
dev = [
    "beautifulsoup4>=4.14.3",
    "coverage>=7.13.5",
    "ipykernel>=7.2.0",
    "nltk>=3.9.4",
    "pandas>=3.0.2",
    "pytest>=9.0.3",
    "ruff>=0.15.9",
]
